@@ -131,7 +131,7 @@
 			font-size: 1.3em;
 			letter-spacing: -1px;
 		}
-		
+
 			#header nav a {
 				display: inline-block;
 				text-decoration: none;
@@ -139,7 +139,7 @@
 				padding: 0 10px 0 10px;
 				outline: 0;
 			}
-			
+
 			#header nav a.current-page-item {
 				background-color: #007897;
 				background-image: -moz-linear-gradient(top, #007b99, #007897);
@@ -161,6 +161,110 @@
 				background-image: linear-gradient(top, #0782a0, #077d9b);
 				box-shadow: inset 0px 1px 5px 1px rgba(0,0,0,0.05), 0px 0px 5px 1px rgba(255,255,255,0.05);
 			}
+
+ul.dropdown {
+    position: relative;
+    width: 100%;
+    padding: 0 0 0 0;
+}
+
+ul.dropdown li {
+    font-weight: bold;
+    float: left;
+    width: 180px;
+    position: relative;
+}
+
+ul.dropdown a:hover {
+    color: #000;
+}
+
+#nav ul.dropdown li a {
+    display: block;
+    padding: 0 10px 0 10px;
+    color: #fff;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    font-weight: 300;
+}
+
+ul.dropdown li a:hover,
+ul.dropdown li a.hover {
+    background-color: #0882a1;
+    background-image: -moz-linear-gradient(top, #0782a0, #077d9b);
+    background-image: -webkit-linear-gradient(top, #0782a0, #077d9b);
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0782a0), to(#077d9b));
+    background-image: -ms-linear-gradient(top, #0782a0, #077d9b);
+    background-image: -o-linear-gradient(top, #0782a0, #077d9b);
+    background-image: linear-gradient(top, #0782a0, #077d9b);
+    position: relative;
+    color: #fff;
+}
+
+
+ul.dropdown ul {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 180px;
+    z-index: 1000;
+}
+
+ul.dropdown ul li {
+    font-weight: normal;
+    color: #fff;
+    border-bottom: 1px solid #ccc;
+    background-color: #007294;
+    background-image: -moz-linear-gradient(top, #008dab, #007294);
+    background-image: -webkit-linear-gradient(top, #008dab, #007294);
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#008dab), to(#007294));
+    background-image: -ms-linear-gradient(top, #008dab, #007294);
+    background-image: -o-linear-gradient(top, #008dab, #007294);
+    background-image: linear-gradient(top, #008dab, #007294);
+    z-index: 2000;
+}
+
+ul.dropdown ul li a {
+    display: block;
+    color: #fff !important;
+    background-color: #007294;
+    background-image: -moz-linear-gradient(top, #008dab, #007294);
+    background-image: -webkit-linear-gradient(top, #008dab, #007294);
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#008dab), to(#007294));
+    background-image: -ms-linear-gradient(top, #008dab, #007294);
+    background-image: -o-linear-gradient(top, #008dab, #007294);
+    background-image: linear-gradient(top, #008dab, #007294);
+}
+
+ul.dropdown ul li a:hover {
+    display: block;
+    background: #3498db !important;
+    color: #fff !important;
+}
+
+.drop > a {
+    position: relative;
+}
+
+.drop > a:after {
+    content:"";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    border-left: 5px solid transparent;
+    border-top: 5px solid #fff;
+    border-right: 5px solid transparent;
+    z-index: 999;
+}
+
+.drop > a:hover:after {
+    content:"";
+    border-left: 5px solid transparent;
+    border-top: 5px solid #fff;
+    border-right: 5px solid transparent;
+}
 
 /* Banner */
 
