@@ -37,15 +37,41 @@
                         <a href="http://sns.zhongguohaogongsi.com">个人空间</a>
                     </div>
                     <h1><a href="/" id="logo">主页</a></h1>
-                    <nav id="nav">
-                        <!--<a href="index.html" class="current-page-item">Homepage</a>
-                        <a href="twocolumn1.html">Two Column #1</a>
-                        <a href="twocolumn2.html">Two Column #2</a>
-                        <a href="onecolumn.html">One Column</a>
-                        <a href="threecolumn.html">Three Column</a>-->
+                    <!--<nav id="nav">
                         {dede:channel type='top' row='10' currentstyle="<a href='~typelink~' class='current-page-item' ~rel~>~typename~</a>"}
                         <a href='[field:typeurl/]' [field:rel/]>[field:typename/]</a>
                         {/dede:channel}
+                    </nav>-->
+                    <nav id="nav">
+                        <ul class="dropdown">
+                            <li class="drop"><a href="#">菜单1</a>
+                                <ul class="sub_menu">
+                                    <li><a href="#">子菜单1</a></li>
+                                    <li><a href="#">子菜单2</a></li>
+                                    <li><a href="#">子菜单3</a></li>
+                                    <li><a href="#">子菜单4</a></li>
+                                </ul>
+                            </li>
+                            <li class="drop"><a href="#">菜单2</a>
+                                <ul class="sub_menu">
+                                    <li><a href="#">子菜单1</a></li>
+                                    <li><a href="#">子菜单2</a></li>
+                                    <li><a href="#">子菜单3</a></li>
+                                    <li><a href="#">子菜单4</a></li>
+
+                                </ul>
+                            </li>
+                            <li class="drop"><a href="#">菜单3</a>
+                                <ul class="sub_menu">
+                                    <li><a href="#">子菜单1</a></li>
+                                    <li><a href="#">子菜单2</a></li>
+                                    <li><a href="#">子菜单3</a></li>
+                                    <li><a href="#">子菜单4</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">菜单4</a>
+                            </li>
+                        </ul>
                     </nav>
                 </header>
 
