@@ -329,5 +329,6 @@
     </div>
 </div>
 <!-- ********************************************************* -->
+<script type="text/javascript" src="{dede:global.cfg_templets_skin/}/js/core.js"></script>
 </body>
 </html>
