@@ -1,0 +1,51 @@
+/**
+ * @title core
+ * @description
+ * core
+ * @author zhangchunsheng423@gmail.com
+ * @version V3.0
+ * @date 2014-06-30
+ * @copyright  Copyright (c) 2010-2014 Luomor Inc. (http://www.luomor.com)
+ */
+$(function(){
+    var maxHeight = 60;
+    $(".dropdown > li").hover(function() {
+        var $container = $(this),
+            $list = $container.find("ul"),
+            $anchor = $container.find("a"),
+            height = $list.height() * 1.1,       // make sure there is enough room at the bottom
+            multiplier = height / maxHeight;     // needs to move faster if list is taller
+
+        // need to save height here so it can revert on mouseout
+        $container.data("origHeight", $container.height());
+
+        // so it can retain it's rollover color all the while the dropdown is open
+        $anchor.addClass("hover");
+
+        // make sure dropdown appears directly below parent list item
+        $list
+            .show()
+            .css({
+                paddingTop: $container.data("origHeight")
+            });
+
+        // don't do any animation if list shorter than max
+        if (multiplier > 1) {
+            $container
+                .css({
+                    height: maxHeight
+                });
+        }
+    }, function() {
+        var $el = $(this);
+        // put things back to normal
+        $el
+            .height($(this).data("origHeight"))
+            .find("ul")
+            .css({ top: 0 })
+            .hide()
+            .end()
+            .find("a")
+            .removeClass("hover");
+    });
+});
