@@ -45,6 +45,9 @@
 2.新功能：增加php配置
 3.新功能：调整todo内容
 
+[zhongyuan_security_1.0.0.1 2014-06-30 张春生]
+1.新功能：调整菜单样式
+
 --备注分类
 1、新功能：
 2、Bug:
